--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   firebase_core: ^2.24.2
   cloud_firestore: ^4.14.0
   flutter_slidable: ^3.0.1
+  timestamp_to_string: ^0.0.1
+  intl: ^0.18.1
+  google_fonts: ^6.1.0
+  date_picker_timeline: ^1.2.5
+  get: ^4.6.6
+  
 
 dev_dependencies:
   flutter_test:
