--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   date_picker_timeline: ^1.2.5
   get: ^4.6.6
   lottie: ^3.0.0
+  popover: ^0.2.9
   
 
 dev_dependencies:
@@ -76,6 +77,10 @@ flutter:
       - assets/logo/
       - assets/json/
       - assets/vehicles/
+      - assets/garden/
+      - assets/glass/
+      - assets/service/
+      - assets/tank/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
