--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.1.1
   firebase_core: ^2.24.2
-  cloud_firestore: ^4.14.0
+  cloud_firestore: ^4.15.4
   flutter_slidable: ^3.0.1
   timestamp_to_string: ^0.0.1
   intl: ^0.18.1
@@ -47,11 +47,20 @@ dependencies:
   lottie: ^3.0.0
   popover: ^0.2.9
   firebase_auth: ^4.17.3
+  flutter_launcher_icons: ^0.13.1
+  upi_india: ^3.0.1
+  flutter_credit_card: ^4.0.1
+  firebase_core_web: ^2.11.4
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo/logo.jpg"
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
